syntax = "proto3";

// PID tuning parameters for the pitch of the balance bot.
message PitchPidParams {
    float kp = 1; // Proportional gain
    float ki = 2; // Integral gain
    float kd = 3; // Derivative gain
    float kf = 4; // Feedforward gain
    float integral_zero_threshold = 5; // Threshold for integral to be considered zero
    float integral_saturation_limit = 6; // Integral saturation limit
    bool reset_integral = 7; // Reset integral on zero crossing
    bool ff_add_gravity = 8; // Add influence of gravity to feedforward
}

// PID tuning parameters for the yaw of the balance bot.
message YawPidParams {
    float kp = 1; // Proportional gain
    float ki = 2; // Integral gain
    float kd = 3; // Derivative gain
    float kf = 4; // Feedforward gain
    float integral_zero_threshold = 5; // Threshold for integral to be considered zero
    float integral_saturation_limit = 6; // Integral saturation limit
    bool reset_integral = 7; // Reset integral on zero crossing
}